--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <h1>Chi sono...</h1>
-    <img src="immagini/Davide Picerno.jpg" alt="" />
+    <img src="immagini/Davide Picerno.jpg" alt="non la prende" />
     <p>
       Sono Davide Picerno e sono uno studente di Ingegneria Aerospaziale al
       <a href="https://www.polito.it/">Politecnico di Torino</a>. <br />
