--- a/Sito.html
+++ b/Sito.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <h1>Chi sono...</h1>
-    <img src="immagini/Davide Picerno.jpg" alt="" />
+    <img src="/immagini/Davide Picerno.jpg" alt="" />
     <p>
       Sono Davide Picerno e sono uno studente di Ingegneria Aerospaziale al
       <a href="https://www.polito.it/">Politecnico di Torino</a>. <br />
@@ -33,7 +33,14 @@
       ambiente fortemente competitivo ma di squadra. Ciò che mi suscita
       particolare interesse è l'aerodinamica dei corpi. Attualmente, infatti,
       frequento proprio un corso di studi dedicato; ne parlo meglio
-      nell'apposita sezione.
+      nell'apposita sezione. <br />
+      In un futuro prossimo mi piacerebbe mettermi in gioco in uno dei due
+      ambiti precedentemente citati ma in un posto lontano da Torino per avere
+      modo di conoscere altre culture; poi eventualmente potrei tornare nella
+      cintura di Torino. Mi piacerebbe molto, quindi, avere delle prime
+      esperienze lavorative o all'estero oppure in altre regioni d'Italia.
+      <br />
+      Sono dell'idea che faccio sempre in tempo a tornare ma non a partire!
     </p>
     <h2 id="section-Percorso_Scolastico">Percorso scolastico</h2>
     <h3>Superiori</h3>
@@ -110,33 +117,117 @@
     </p>
     <h4>Percorso di Laurea Magistrale in Ingegneria Aerospaziale</h4>
     <p>
-      Come specialistica ho scelto quella in Aerogasdinamica dove si
-      approfondisce lo studio dei flussi con materie pratiche (nelle gallerie
-      del vento del dipartimento), teoriche e affini alla numerica. <br />
+      Come specialistica ho scelto Aerogasdinamica dove si approfondisce lo
+      studio dei flussi con materie pratiche (nelle gallerie del vento del
+      dipartimento), teoriche e riguardanti la numerica. <br />
       Le materie che più mi hanno entusiasmato sono state Gasdinamica e
       Aerodinamica sperimentale. La prima riguarda lo studio dei flussi
-      nell'ambito del comprimibile e alto subsonico.
+      nell'ambito del comprimibile (alto subsonico) e del supersonico. E' stata
+      più entusiasmante rispetto ad Aerodinamica (terzo anno triennale) perchè
+      era leggermente meno teorica ma più applicativa. Aerodinamica sperimentale
+      è stato l'ultimo esame che ho sostenuto nel percorso di studi ed è ideale
+      per essere al secondo semestre del secondo anno in quanto vengono ripresi
+      tutti gli argomenti della fluidodinamica e messi in pratica
+      sperimentalmente. Tutti i laboratori del corso sono racchiusi in una
+      relazione che ho tenuto a fare nel migliore dei modi in quanto in un
+      futuro saprei dove andare a ricercare determinati argomenti. <br />
+      Grazie alla tesi di triennale mi sono interessato particolarmente al mondo
+      delle vibrazioni, pertanto ho deciso di frequentare corsi attinenti alla
+      meccanica della vibrazione ("Dinamica delle strutture aeronautiche" e
+      "Aeroelasticità"). <br />
+      Al momento sto seguendo un percorso di Tesi relativamente
+      all'estrapolazione della traiettoria dei velivoli per i simulatori di volo
+      presso
+      <a
+        href="https://aircraft.leonardo.com/it/?gclid=Cj0KCQjwnrmlBhDHARIsADJ5b_mD3lRGw3XXvCc-NRu0t5Is2m9zqoxAaF7DatiF6nXjfrZhfj4Cwl0aAqgBEALw_wcB"
+        >Leonardo Velivoli</a
+      >
+      (stabilimento in Corso Francia, Torino).
     </p>
     <h2 id="section-Viaggi">Dove sono stato</h2>
+    <h3>Scozia</h3>
+    <p>
+      Ho avuto la fortuna di poter passare 6 settimane ogni estate dal 2015 al
+      2018 in Scozia in un parco acquatico chiamato
+      <a href="https://www.foxlake.co.uk/">Foxlake</a> in cui, tra le altre
+      attività, si fa Wakeboard. Il parco si trova in Dunbar, un paese piccolino
+      nella regione di East Lothian. Di questa esperienza ho dei bei ricordi in
+      quanto ho conosciuto molte persone della mia età di una cultura abbastanza
+      diversa dalla mia. Al contrario di come si possa pensare, tutti i ragazzi
+      che ho conosciuto erano molto alla mano e soprattutto molto inclusivi. Mi
+      sono sempre sentito il benvenuto tra di loro.
+      <br />
+      Della Scozia mi è rimasto anche il bel ricordo (oltre alle partite di golf
+      guardate e non giocate) delle passeggiate nei bei paesaggi caratteristici
+      immersi nel verde lungo il gelido Mar del nord.
+      <br />
+      Sono anche stato a vedere la gara di Formula 1 a Silverstone nel 2017 e
+      nel 2018 (che gli appassionati ricorderanno come "Qui.. a casa loro!"). E'
+      stato veramente spettacolare, è uno sport molto diverso rispetto a quello
+      che si vede in televisione. Dal vivo si percepisce decisamente meglio la
+      velocità a cui sfrecciano le monoposto e quanto è forte il Downforce.
+      Ricordo che sono rimasto sconvolto dal vedere la velocità che
+      sviluppavano, non tanto in rettilineo quanto nelle curve. Letteralmente
+      impressionante. <br />
+    </p>
+    <h3>Qatar</h3>
+    <p>
+      Nel 2014 sono stato in vacanza in Qatar, a Doha, un'altra cultura molto
+      diversa dalla mia! Ho dei bei ricordi inerenti allo svago (il deserto coi
+      quad, mare, piscina,..) ma non molti relativi alle caratteristiche del
+      posto. Sono stato nel vecchio mercato di Doha che è veramente
+      caratteristico, nel deserto, nelle lagune e nel museo di Arte islamica.
+      Credo di aver visto, appunto, il 90% di quello che ci fosse da visitare.
+      Come tutte le città molto recenti non hanno una storia molto lunga e
+      quindi si possono osservare delle differenze con le nostre città che
+      risaltano all'occhio. I marciapiedi sono quasi del tutto inesistenti
+      perchè ogni persona possiede un'automobile e, ad esempio, non esistono
+      vere e proprie zone di ritrovo per i giovani. Non ci sono monumenti o
+      strutture datate che permettono di immaginare come fosse la città parecchi
+      anni fa. Ci sono prevalentemente palazzi mastodontici nel centro della
+      vittà e una zona periferica che viene tenuta abbastanza nascosta
+      dall'esterno.
+    </p>
+    <h3>Italia</h3>
+    <p>
+      Ho avuto il piacere di girare abbastanza l'Italia. Sono stato nelle isole
+      e al Sud oltre che al Nord tra Piemonte, Lombardia e Veneto. Mi manca da
+      visitare il centro del Paese che spero di visitare presto. Non ho fretta
+      dal momento che di tanto in tanto il week end in qualche città italiana o
+      qualche zona caratteristica è facilmente organizzabile.
+    </p>
     <h2 id="section-Motivo sito">Perchè questa pagina web?</h2>
+    <p>
+      L'idea di questa pagina web nasce puramente per caso. Mi piaceva pensare
+      di poter imparare a creare una pagina web raccontandomi in un modo meno
+      formale. Quello che credo essere il punto di forza di una pagina web è che
+      chiunque può informarsi su di te in qualsiasi momento. Mi incuriosisce il
+      pensiero che qualcuno sta leggendo questa pagina mentre io magari sto
+      facendo qualunque tipo di attività come, ad esempio, dormire, studiare,
+      lavorare o bere una birra in compagnia. Sto curando questa pagina a tempo
+      perso per fare pratica. Spero di tenerla aggiornata il più possibile sia
+      dal punto di vista dei contenuti che dal punto di vista grafico.
+    </p>
     <h2 id="section-Contatti">Contatti</h2>
-    I miei profili social sono: <br />
-    - Linkedin:
-    <a href="https://www.linkedin.com/in/davide-picerno-3906a2184/"
-      >Davide Picerno</a
-    >; <br />
-    - Instagram:
-    <a href="https://instagram.com/diaviidie?igshid=NGExMmI2YTkyZg=="
-      >@diaviidie</a
-    >.
-    <br />
+    <p>
+      I miei profili social sono: <br />
+      - Linkedin:
+      <a href="https://www.linkedin.com/in/davide-picerno-3906a2184/"
+        >Davide Picerno</a
+      >; <br />
+      - Instagram:
+      <a href="https://instagram.com/diaviidie?igshid=NGExMmI2YTkyZg=="
+        >@diaviidie</a
+      >.
+      <br />
 
-    <br />
-    Ti invito a fornirmi dei feedback su questa pagina in quanto sono agli
-    albori e quindi c'è un infinito campo di miglioramento dal punto di vista
-    dei contenuti e della struttura. Se desideri suggerirmi qualche consiglio o
-    qualche dritta scrivimi pure al seguente indirizzo mail:
-    <a href="mailto:picerno5@gmail.com">picerno5@gmail.com</a><br />
-    <a href="#">Torna all'inizio</a>
+      <br />
+      Ti invito a fornirmi dei feedback su questa pagina in quanto sono agli
+      albori e quindi c'è un infinito margine di miglioramento dal punto di
+      vista dei contenuti e della struttura. Ti invito, quindi, a suggerirmi
+      qualche modifica scrivendomi al seguente indirizzo:
+      <a href="mailto:picerno5@gmail.com">picerno5@gmail.com</a>.<br />
+      <a href="#"><em> Torna all'inizio</em></a>
+    </p>
   </body>
 </html>
