--- a/Sito.html
+++ b/Sito.html
@@ -7,7 +7,7 @@
     <title>Davide Picerno web page</title>
     <style>
       img {
-        width: 350px;
+        width: 150px;
         border-radius: 20px;
         float: right;
       }
@@ -15,7 +15,7 @@
   </head>
   <body>
     <h1>Chi sono...</h1>
-    <img src="/immagini/Davide Picerno.jpg" alt="" />
+    <img src="immagini/Davide Picerno.jpg" alt="" />
     <p>
       Sono Davide Picerno e sono uno studente di Ingegneria Aerospaziale al
       <a href="https://www.polito.it/">Politecnico di Torino</a>. <br />
