--- a/Sito.html
+++ b/Sito.html
@@ -7,18 +7,29 @@
     <title>Davide Picerno web page</title>
     <style>
       img {
-        width: 200px;
+        width: 350px;
         border-radius: 20px;
         float: right;
+        margin-top: 10px;
+      }
+      .Titoli-apple {
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+          Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+          sans-serif;
+      }
+      .Titoli-samsung {
+        font-family: "SamsungSharpSans", arial, sans-serif;
       }
     </style>
   </head>
   <body>
-    <h1>Chi sono...</h1>
     <img src="immagini/Davide Picerno.jpg" alt="" />
-    <p>
+    <h1>Chi sono...</h1>
+
+    <p class="Titoli-samsung" align="justify">
       Sono Davide Picerno e sono uno studente di Ingegneria Aerospaziale al
-      <a href="https://www.polito.it/">Politecnico di Torino</a>. <br />
+      <a href="https://www.polito.it/" target="_blank">Politecnico di Torino</a
+      >. <br />
       Se desideri saltare ad una ben precisa sezione del mio sito clicca la
       sezione che ti interessa riportata di seguito: <br />
       - <a href="#section-Passion">Passioni</a>;<br />
@@ -27,8 +38,8 @@
       - <a href="#section-Motivo sito">Perchè questa pagina web?</a> <br />
       - <a href="#section-Contatti">Contatti.</a>
     </p>
-    <h2 id="section-Passion">Passioni</h2>
-    <p>
+    <h2 class="Titoli-apple" id="section-Passion">Passioni</h2>
+    <p class="Titoli-samsung" align="justify">
       Sono un grande appassionato di Formula 1 e Motorsport in quanto è un
       ambiente fortemente competitivo ma di squadra. Ciò che mi suscita
       particolare interesse è l'aerodinamica dei corpi. Attualmente, infatti,
@@ -42,11 +53,15 @@
       <br />
       Sono dell'idea che faccio sempre in tempo a tornare ma non a partire!
     </p>
-    <h2 id="section-Percorso_Scolastico">Percorso scolastico</h2>
-    <h3>Superiori</h3>
-    <p>
+    <h2 class="Titoli-apple" id="section-Percorso_Scolastico">
+      Percorso scolastico
+    </h2>
+    <h3 class="Titoli-apple">Superiori</h3>
+    <p class="Titoli-samsung" align="justify">
       Da Settembre 2012 a Giugno 2018 ho frequentato l'istituto tecnico
-      <a href="https://www.itispininfarina.edu.it/"> ITIS G.B. Pininfarina</a>
+      <a href="https://www.itispininfarina.edu.it/" target="_blank">
+        ITIS G.B. Pininfarina</a
+      >
       nel corso di <em>Meccanica e Meccatronica</em>. Ho deciso di intraprendere
       tale percorso per un semplice motivo: ero convinto che fosse l'istituto
       più adatto a me rispetto alla concorrenza. Ho fatto quella scelta perchè,
@@ -59,7 +74,7 @@
       Questa scuola mi ha dato la possibilità di seguire un progetto di
       Alternanza Scuola-Lavoro (ASL) particolare, infatti era adottato da 4 soli
       istituti in tutto il paese. Il progetto di ASL prendeva il nome di
-      <em>Sistema Duale</em>. Tale percorso prevedeva un totale di circa
+      <em>Sistema&Duale</em>. Tale percorso prevedeva un totale di circa
       <em>1000 ore in azienda</em>. Queste ore erano spalmate dal 3' al 5' anno.
       Ogni studente (a seguito di una selezione) veniva assegnato ad una
       azienda. Eravamo un totale di 24 studenti e le aziende disponibili erano
@@ -69,15 +84,17 @@
       aeronautico facente parte del gruppo <em>Collins Aerospace</em>). Lì ho
       avuto la fortuna di appassionarmi anche al mondo dell'Aerospace.
     </p>
-    <h3>Università</h3>
+    <h3 class="Titoli-apple">Università</h3>
     Come già anticipato, frequento il Politecnico di Torino. La mia scelta di
     proseguire gli studi presso il Politecnico è maturata nel percorso di ASL.
     Ho creduto da subito nel percorso di <em>Ingegneria Aerospaziale</em> in
     quanto permette come sbocchi sia il settore Aeronautico che quello
     Automotive. Come tutti i corsi attualmente presenti nell'ambito
     dell'Ingegneria al Politecnico di Torino, questi sono suddivisi in 3+2.
-    <h4>Percorso di Laurea Triennale in Ingegneria Aerospaziale</h4>
-    <p>
+    <h4 class="Titoli-apple">
+      Percorso di Laurea Triennale in Ingegneria Aerospaziale
+    </h4>
+    <p align="justify">
       Il percorso di laurea triennale serve proprio per porre le fondamenta da
       sviluppare nel percorso Magistrale. Il primo anno era uguale per tutti i
       rami di Ingegneria. <br />
@@ -115,8 +132,10 @@
       utilizzare Matlab &copy siccome è un programma molto potente e molto
       diffuso in ambito ingegneristico. <br />
     </p>
-    <h4>Percorso di Laurea Magistrale in Ingegneria Aerospaziale</h4>
-    <p>
+    <h4 class="Titoli-apple">
+      Percorso di Laurea Magistrale in Ingegneria Aerospaziale
+    </h4>
+    <p class="Titoli-samsung" align="justify">
       Come specialistica ho scelto Aerogasdinamica dove si approfondisce lo
       studio dei flussi con materie pratiche (nelle gallerie del vento del
       dipartimento), teoriche e riguardanti la numerica. <br />
@@ -140,22 +159,24 @@
       presso
       <a
         href="https://aircraft.leonardo.com/it/?gclid=Cj0KCQjwnrmlBhDHARIsADJ5b_mD3lRGw3XXvCc-NRu0t5Is2m9zqoxAaF7DatiF6nXjfrZhfj4Cwl0aAqgBEALw_wcB"
+        target="_blank"
         >Leonardo Velivoli</a
       >
       (stabilimento in Corso Francia, Torino).
     </p>
-    <h2 id="section-Viaggi">Dove sono stato</h2>
-    <h3>Scozia</h3>
-    <p>
+    <h2 class="Titoli-apple" id="section-Viaggi">Dove sono stato</h2>
+    <h3 class="Titoli-apple">Scozia</h3>
+    <p class="Titoli-samsung" align="justify">
       Ho avuto la fortuna di poter passare 6 settimane ogni estate dal 2015 al
       2018 in Scozia in un parco acquatico chiamato
-      <a href="https://www.foxlake.co.uk/">Foxlake</a> in cui, tra le altre
-      attività, si fa Wakeboard. Il parco si trova in Dunbar, un paese piccolino
-      nella regione di East Lothian. Di questa esperienza ho dei bei ricordi in
-      quanto ho conosciuto molte persone della mia età di una cultura abbastanza
-      diversa dalla mia. Al contrario di come si possa pensare, tutti i ragazzi
-      che ho conosciuto erano molto alla mano e soprattutto molto inclusivi. Mi
-      sono sempre sentito il benvenuto tra di loro.
+      <a href="https://www.foxlake.co.uk/" target="_blank">Foxlake</a> in cui,
+      tra le altre attività, si fa Wakeboard. Il parco si trova in Dunbar, un
+      paese piccolino nella regione di East Lothian. Di questa esperienza ho dei
+      bei ricordi in quanto ho conosciuto molte persone della mia età di una
+      cultura abbastanza diversa dalla mia. Al contrario di come si possa
+      pensare, tutti i ragazzi che ho conosciuto erano molto alla mano e
+      soprattutto molto inclusivi. Mi sono sempre sentito il benvenuto tra di
+      loro.
       <br />
       Della Scozia mi è rimasto anche il bel ricordo (oltre alle partite di golf
       guardate e non giocate) delle passeggiate nei bei paesaggi caratteristici
@@ -170,8 +191,8 @@
       sviluppavano, non tanto in rettilineo quanto nelle curve. Letteralmente
       impressionante. <br />
     </p>
-    <h3>Qatar</h3>
-    <p>
+    <h3 class="Titoli-apple">Qatar</h3>
+    <p class="Titoli-samsung" align="justify">
       Nel 2014 sono stato in vacanza in Qatar, a Doha, un'altra cultura molto
       diversa dalla mia! Ho dei bei ricordi inerenti allo svago (il deserto coi
       quad, mare, piscina,..) ma non molti relativi alle caratteristiche del
@@ -188,16 +209,18 @@
       vittà e una zona periferica che viene tenuta abbastanza nascosta
       dall'esterno.
     </p>
-    <h3>Italia</h3>
-    <p>
+    <h3 class="Titoli-apple">Italia</h3>
+    <p class="Titoli-samsung" align="justify">
       Ho avuto il piacere di girare abbastanza l'Italia. Sono stato nelle isole
       e al Sud oltre che al Nord tra Piemonte, Lombardia e Veneto. Mi manca da
       visitare il centro del Paese che spero di visitare presto. Non ho fretta
       dal momento che di tanto in tanto il week end in qualche città italiana o
       qualche zona caratteristica è facilmente organizzabile.
     </p>
-    <h2 id="section-Motivo sito">Perchè questa pagina web?</h2>
-    <p>
+    <h2 class="Titoli-apple" id="section-Motivo sito">
+      Perchè questa pagina web?
+    </h2>
+    <p class="Titoli-samsung" align="justify">
       L'idea di questa pagina web nasce puramente per caso. Mi piaceva pensare
       di poter imparare a creare una pagina web raccontandomi in un modo meno
       formale. Quello che credo essere il punto di forza di una pagina web è che
@@ -208,15 +231,19 @@
       perso per fare pratica. Spero di tenerla aggiornata il più possibile sia
       dal punto di vista dei contenuti che dal punto di vista grafico.
     </p>
-    <h2 id="section-Contatti">Contatti</h2>
-    <p>
+    <h2 class="Titoli-apple" id="section-Contatti">Contatti</h2>
+    <p class="Titoli-samsung" align="justify">
       I miei profili social sono: <br />
       - Linkedin:
-      <a href="https://www.linkedin.com/in/davide-picerno-3906a2184/"
+      <a
+        href="https://www.linkedin.com/in/davide-picerno-3906a2184/"
+        target="_blank"
         >Davide Picerno</a
       >; <br />
       - Instagram:
-      <a href="https://instagram.com/diaviidie?igshid=NGExMmI2YTkyZg=="
+      <a
+        href="https://instagram.com/diaviidie?igshid=NGExMmI2YTkyZg=="
+        target="_blank"
         >@diaviidie</a
       >.
       <br />
