--- a/Sito.html
+++ b/Sito.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <img src="immagini/Davide Picerno.jpg" alt="" />
-    <h1>Chi sono...</h1>
+    <h1 class="Titoli-apple">Chi sono...</h1>
 
     <p class="Titoli-samsung" align="justify">
       Sono Davide Picerno e sono uno studente di Ingegneria Aerospaziale al
