--- a/Sito.html
+++ b/Sito.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <img src="immagini/Davide Picerno.jpg" alt="" />
-    <h1 class="Titoli-apple">Chi sono...</h1>
+    <h1>Chi sono...</h1>
 
     <p class="Titoli-samsung" align="justify">
       Sono Davide Picerno e sono uno studente di Ingegneria Aerospaziale al
@@ -85,16 +85,19 @@
       avuto la fortuna di appassionarmi anche al mondo dell'Aerospace.
     </p>
     <h3 class="Titoli-apple">Università</h3>
-    Come già anticipato, frequento il Politecnico di Torino. La mia scelta di
-    proseguire gli studi presso il Politecnico è maturata nel percorso di ASL.
-    Ho creduto da subito nel percorso di <em>Ingegneria Aerospaziale</em> in
-    quanto permette come sbocchi sia il settore Aeronautico che quello
-    Automotive. Come tutti i corsi attualmente presenti nell'ambito
-    dell'Ingegneria al Politecnico di Torino, questi sono suddivisi in 3+2.
+    <p class="Titoli-samsung" align="justify">
+      Come già anticipato, frequento il Politecnico di Torino. La mia scelta di
+      proseguire gli studi presso il Politecnico è maturata nel percorso di ASL.
+      Ho creduto da subito nel percorso di <em>Ingegneria Aerospaziale</em> in
+      quanto permette come sbocchi sia il settore Aeronautico che quello
+      Automotive. Come tutti i corsi attualmente presenti nell'ambito
+      dell'Ingegneria al Politecnico di Torino, questi sono suddivisi in 3+2.
+    </p>
+
     <h4 class="Titoli-apple">
       Percorso di Laurea Triennale in Ingegneria Aerospaziale
     </h4>
-    <p align="justify">
+    <p class="Titoli-samsung" align="justify">
       Il percorso di laurea triennale serve proprio per porre le fondamenta da
       sviluppare nel percorso Magistrale. Il primo anno era uguale per tutti i
       rami di Ingegneria. <br />
