--- a/Sito.html
+++ b/Sito.html
@@ -11,6 +11,7 @@
         border-radius: 20px;
         float: right;
         margin-top: 10px;
+        margin-left: 10px;
       }
       .Titoli-apple {
         font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
