--- a/Sito.html
+++ b/Sito.html
@@ -31,7 +31,7 @@
       Sono Davide Picerno e sono uno studente di Ingegneria Aerospaziale al
       <a href="https://www.polito.it/" target="_blank">Politecnico di Torino</a
       >. <br />
-      Se desideri saltare ad una ben precisa sezione del mio sito clicca la
+      Se desideri andare ad una precisa sezione del mio sito clicca la
       sezione che ti interessa riportata di seguito: <br />
       - <a href="#section-Passion">Passioni</a>;<br />
       - <a href="#section-Percorso_Scolastico">Percorso scolastico</a>;<br />
