--- a/Sito.html
+++ b/Sito.html
@@ -55,14 +55,12 @@
   <body>
     <img class="io" src="immagini/Davide Picerno.jpg" alt="" />
     <h1 class="Titolo-principale">Chi sono...</h1>
-    <p class="data-ultimo-aggiornamento">
-      (ultimo aggiornamento in data 07/15/2023)
-    </p>
+    <p class="data-ultimo-aggiornamento">(ultimo aggiornamento: 07/15/2023)</p>
     <p>
       Sono Davide Picerno e sono uno studente di Ingegneria Aerospaziale al
-      <a href="https://www.polito.it/" target="_blank">Politecnico di Torino</a
-      >. <br />
-      Se desideri saltare ad una ben precisa sezione del mio sito clicca la
+      <a href="https://www.polito.it/" target="_blank">Politecnico di Torino</a>
+      &#128748;. <br />
+      Se desideri andare ad una ben precisa sezione del mio sito clicca la
       sezione che ti interessa riportata di seguito: <br />
     </p>
 
@@ -286,9 +284,9 @@
     <p>
       Ho avuto il piacere di girare abbastanza l'Italia. Sono stato nelle isole
       e al Sud oltre che al Nord tra Piemonte, Lombardia e Veneto. Mi manca da
-      visitare il centro del Paese che spero di visitare presto. Non ho fretta
-      dal momento che di tanto in tanto il week end in qualche città italiana o
-      qualche zona caratteristica è facilmente organizzabile.
+      visitare un po' il centro del Paese che spero di riuscire a fare presto.
+      Non ho fretta dal momento che di tanto in tanto il week end in qualche
+      città italiana o qualche zona caratteristica è facilmente organizzabile.
     </p>
     <h2 class="Titoli-apple" id="section-Motivo sito">
       Perchè questa pagina web?
