--- a/Sito.html
+++ b/Sito.html
@@ -6,6 +6,9 @@
     <meta name="description" content="Pagina web di Davide Picerno" />
     <title>Davide Picerno web page</title>
     <style>
+      html {
+        scroll-behavior: smooth;
+      }
       p {
         font-family: "SamsungSharpSans", arial, sans-serif;
         text-align: justify;
