--- a/Sito.html
+++ b/Sito.html
@@ -55,6 +55,15 @@
       }
     </style>
   </head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8X328D6HCX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8X328D6HCX');
+</script>
   <body>
     <img class="io" src="immagini/Davide Picerno.jpg" alt="" />
     <h1 class="Titolo-principale">Chi sono...</h1>
