--- a/Sito.html
+++ b/Sito.html
@@ -1,79 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Pagina web di Davide Picerno" />
-    <title>Davide Picerno web page</title>
     <style>
       html {
         scroll-behavior: smooth;
       }
-      p {
-        font-family: "SamsungSharpSans", arial, sans-serif;
-        text-align: justify;
-        color: rgba(0, 0, 0, 0.8);
-        line-height: 22px;
-      }
-      .io {
-        width: 350px;
-        border-radius: 20px;
-        float: right;
-        margin-top: 10px;
-        margin-left: 15px;
-      }
-      .Titoli-apple {
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-          Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-          sans-serif;
-      }
-      .data-ultimo-aggiornamento {
-        line-height: 0px;
-        color: rgba(0, 0, 0, 0.3);
-        margin-top: 0;
-        font-style: italic;
-        font-size: smaller;
-      }
-
-      .Titolo-principale {
-        margin-bottom: 2px;
-      }
-      .elenco-puntato {
-        text-decoration: none;
-      }
-      .elenco-puntato:hover {
-        text-decoration: underline;
-      }
-      .torna-all-inizio {
-        text-align: center;
-      }
-      .bandiere {
-        height: 25px;
-        width: 25px;
-        border-radius: 50%;
-        border: 1px solid #000;
-      }
     </style>
+    <link rel="stylesheet" href="elementi_personalizzati.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Pagina web di Davide Picerno" />
+    <title>Davide Picerno Web Page</title>
   </head>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-8X328D6HCX"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-8X328D6HCX');
-</script>
   <body>
-    <img class="io" src="immagini/Davide Picerno.jpg" alt="" />
+    <img
+      class="io"
+      src="immagini/Davide Picerno.jpg"
+      alt=" Foto di Davide Picerno"
+    />
     <h1 class="Titolo-principale">Chi sono...</h1>
-    <p class="data-ultimo-aggiornamento">(ultimo aggiornamento: 07/17/2023)</p>
+
+    <p class="data-ultimo-aggiornamento">(ultimo aggiornamento: 07/18/2023)</p>
+    <p></p>
+
+    Sono Davide Picerno e sono uno studente di Ingegneria Aerospaziale al
+    <a href="https://www.polito.it/" target="_blank">Politecnico di Torino</a>
+    &#128748;.
     <p>
-      Sono Davide Picerno e sono uno studente di Ingegneria Aerospaziale al
-      <a href="https://www.polito.it/" target="_blank">Politecnico di Torino</a>
-      &#128748;. <br />
       Se desideri andare ad una ben precisa sezione del mio sito clicca la
-      sezione che ti interessa riportata di seguito: <br />
+      sezione che ti interessa riportata di seguito:
     </p>
 
     <ul>
@@ -92,9 +47,12 @@
           >Perchè questa pagina web?</a
         >
       </li>
-      <li><a class="elenco-puntato" href="#section-Contatti">Contatti.</a></li>
+      <li>
+        <a class="elenco-puntato" href="#section-Contatti">Contatti.</a>
+      </li>
     </ul>
     <h2 class="Titoli-apple" id="section-Passion">Passioni</h2>
+
     <p>
       Sono un grande appassionato di Formula 1 e Motorsport in quanto è un
       ambiente fortemente competitivo ma di squadra. Ciò che mi suscita
@@ -109,6 +67,7 @@
       <br />
       Sono dell'idea che faccio sempre in tempo a tornare ma non a partire!
     </p>
+
     <h2 class="Titoli-apple" id="section-Percorso_Scolastico">
       Percorso scolastico
     </h2>
@@ -308,11 +267,12 @@
       di poter imparare a creare una pagina web raccontandomi in un modo meno
       formale. Quello che credo essere il punto di forza di una pagina web è che
       chiunque può informarsi su di te in qualsiasi momento. Mi incuriosisce il
-      pensiero che qualcuno sta leggendo questa pagina mentre io magari sto
+      pensiero che qualcuno stia leggendo questa pagina mentre io magari sto
       facendo qualunque tipo di attività come, ad esempio, dormire, studiare,
       lavorare o bere una birra in compagnia. Sto curando questa pagina a tempo
-      perso per fare pratica. Spero di tenerla aggiornata il più possibile sia
-      dal punto di vista dei contenuti che dal punto di vista grafico.
+      perso per fare pratica e imparare. Spero di tenerla aggiornata il più
+      possibile sia dal punto di vista dei contenuti che dal punto di vista
+      grafico.
     </p>
     <h2 class="Titoli-apple" id="section-Contatti">Contatti</h2>
     <p>
