--- a/Sito.html
+++ b/Sito.html
@@ -1,77 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <style>
-      html {
-        scroll-behavior: smooth;
-      }
-    </style>
-    <link rel="stylesheet" href="elementi_personalizzati.css" />
+    <link rel="stylesheet" href="elementi-personalizzati.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Pagina web di Davide Picerno" />
     <title>Davide Picerno Web Page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <img
-      class="io"
-      src="immagini/Davide Picerno.jpg"
-      alt=" Foto di Davide Picerno"
-    />
-    <h1 class="Titolo-principale">Chi sono...</h1>
+    <div class="Introduzione">
+      <div class="Introduzione-descrizione">
+        <h1 class="Titolo-principale">Chi sono...</h1>
 
-    <p class="data-ultimo-aggiornamento">(ultimo aggiornamento: 07/18/2023)</p>
-    <p></p>
+        <p class="data-ultimo-aggiornamento">
+          (ultimo aggiornamento: 07/19/2023)
+        </p>
+        <p>
+          Sono Davide Picerno e sono uno studente di Ingegneria Aerospaziale al
+          <a
+            class="collegamenti-elenco-puntato"
+            href="https://www.polito.it/"
+            target="_blank"
+            >Politecnico di Torino</a
+          >
+          &#128748;.
+        </p>
+        <p>
+          Se desideri andare ad una ben precisa sezione del mio sito clicca la
+          sezione che ti interessa riportata di seguito:
+        </p>
 
-    Sono Davide Picerno e sono uno studente di Ingegneria Aerospaziale al
-    <a href="https://www.polito.it/" target="_blank">Politecnico di Torino</a>
-    &#128748;.
-    <p>
-      Se desideri andare ad una ben precisa sezione del mio sito clicca la
-      sezione che ti interessa riportata di seguito:
-    </p>
+        <ul>
+          <li>
+            <a class="elenco-puntato" href="#section-Passion">Passioni;</a>
+          </li>
+          <li>
+            <a class="elenco-puntato" href="#section-Percorso_Scolastico"
+              >Percorso scolastico;</a
+            >
+          </li>
+          <li>
+            <a class="elenco-puntato" href="#section-Viaggi"
+              >Dove sono stato;</a
+            >
+          </li>
+          <li>
+            <a class="elenco-puntato" href="#section-Motivo sito"
+              >Perchè questa pagina web;</a
+            >
+          </li>
+          <li>
+            <a class="elenco-puntato" href="#section-Contatti">Contatti.</a>
+          </li>
+        </ul>
+        <h2 class="main-title" id="section-Passion">Passioni</h2>
 
-    <ul>
-      <li><a class="elenco-puntato" href="#section-Passion">Passioni</a>;</li>
-      <li>
-        <a class="elenco-puntato" href="#section-Percorso_Scolastico"
-          >Percorso scolastico</a
-        >;
-      </li>
-      <li>
-        <a class="elenco-puntato" href="#section-Viaggi">Dove sono stato</a
-        >;<br />
-      </li>
-      <li>
-        <a class="elenco-puntato" href="#section-Motivo sito"
-          >Perchè questa pagina web?</a
-        >
-      </li>
-      <li>
-        <a class="elenco-puntato" href="#section-Contatti">Contatti.</a>
-      </li>
-    </ul>
-    <h2 class="Titoli-apple" id="section-Passion">Passioni</h2>
+        <p>
+          Sono un grande appassionato di Formula 1 e Motorsport in quanto è un
+          ambiente fortemente competitivo ma di squadra. Ciò che mi suscita
+          particolare interesse è l'aerodinamica dei corpi. Attualmente,
+          infatti, frequento un corso di studi dedicato; ne parlo meglio
+          nell'apposita sezione. <br />
+          In un futuro prossimo mi piacerebbe mettermi in gioco in uno dei due
+          ambiti precedentemente citati ma in un posto lontano da Torino per
+          avere modo di conoscere altre culture; poi eventualmente potrei
+          tornare nella cintura di Torino. Mi piacerebbe molto, quindi, avere
+          delle prime esperienze lavorative o all'estero oppure in altre regioni
+          d'Italia.
+          <br />
+          Sono dell'idea che faccio sempre in tempo a tornare ma non a partire!
+        </p>
+      </div>
+      <div class="Immagine">
+        <img
+          class="io"
+          src="immagini/Davide Picerno.jpg"
+          alt=" Foto di Davide Picerno"
+        />
+      </div>
+    </div>
 
-    <p>
-      Sono un grande appassionato di Formula 1 e Motorsport in quanto è un
-      ambiente fortemente competitivo ma di squadra. Ciò che mi suscita
-      particolare interesse è l'aerodinamica dei corpi. Attualmente, infatti,
-      frequento un corso di studi dedicato; ne parlo meglio nell'apposita
-      sezione. <br />
-      In un futuro prossimo mi piacerebbe mettermi in gioco in uno dei due
-      ambiti precedentemente citati ma in un posto lontano da Torino per avere
-      modo di conoscere altre culture; poi eventualmente potrei tornare nella
-      cintura di Torino. Mi piacerebbe molto, quindi, avere delle prime
-      esperienze lavorative o all'estero oppure in altre regioni d'Italia.
-      <br />
-      Sono dell'idea che faccio sempre in tempo a tornare ma non a partire!
-    </p>
-
-    <h2 class="Titoli-apple" id="section-Percorso_Scolastico">
+    <h2 class="main-title" id="section-Percorso_Scolastico">
       Percorso scolastico
     </h2>
-    <h3 class="Titoli-apple">Superiori</h3>
+    <h3 class="main-title">Superiori</h3>
     <p>
       Da Settembre 2012 a Giugno 2018 ho frequentato l'istituto tecnico
       <a href="https://www.itispininfarina.edu.it/" target="_blank">
@@ -99,7 +117,7 @@
       aeronautico facente parte del gruppo <em>Collins Aerospace</em>). Lì ho
       avuto la fortuna di appassionarmi anche al mondo dell'Aerospace.
     </p>
-    <h3 class="Titoli-apple">Università</h3>
+    <h3 class="main-title">Università</h3>
     <p>
       Come già anticipato, frequento il Politecnico di Torino. La mia scelta di
       proseguire gli studi presso il Politecnico è maturata nel percorso di ASL.
@@ -109,7 +127,7 @@
       dell'Ingegneria al Politecnico di Torino, questi sono suddivisi in 3+2.
     </p>
 
-    <h4 class="Titoli-apple">
+    <h4 class="main-title">
       Percorso di Laurea Triennale in Ingegneria Aerospaziale
     </h4>
     <p>
@@ -150,7 +168,7 @@
       utilizzare Matlab<sup>&copy</sup> siccome è un programma molto potente e
       molto diffuso in ambito ingegneristico. <br />
     </p>
-    <h4 class="Titoli-apple">
+    <h4 class="main-title">
       Percorso di Laurea Magistrale in Ingegneria Aerospaziale
     </h4>
     <p>
@@ -182,8 +200,8 @@
       >
       (stabilimento in Corso Francia, Torino).
     </p>
-    <h2 class="Titoli-apple" id="section-Viaggi">Dove sono stato</h2>
-    <h3 class="Titoli-apple">
+    <h2 class="main-title" id="section-Viaggi">Dove sono stato</h2>
+    <h3 class="main-title">
       <span>Scozia</span>
       <img
         class="bandiere"
@@ -217,7 +235,7 @@
       sviluppavano, non tanto in rettilineo quanto nelle curve. Letteralmente
       impressionante. <br />
     </p>
-    <h3 class="Titoli-apple">
+    <h3 class="main-title">
       Qatar
       <img
         class="bandiere"
@@ -243,7 +261,7 @@
       vittà e una zona periferica che viene tenuta abbastanza nascosta
       dall'esterno.
     </p>
-    <h3 class="Titoli-apple">
+    <h3 class="main-title">
       Italia
       <img
         class="bandiere"
@@ -259,7 +277,7 @@
       Non ho fretta dal momento che di tanto in tanto il week end in qualche
       città italiana o qualche zona caratteristica è facilmente organizzabile.
     </p>
-    <h2 class="Titoli-apple" id="section-Motivo sito">
+    <h2 class="main-title" id="section-Motivo sito">
       Perchè questa pagina web?
     </h2>
     <p>
@@ -274,7 +292,7 @@
       possibile sia dal punto di vista dei contenuti che dal punto di vista
       grafico.
     </p>
-    <h2 class="Titoli-apple" id="section-Contatti">Contatti</h2>
+    <h2 class="main-title" id="section-Contatti">Contatti</h2>
     <p>
       I miei profili social sono: <br />
       - Linkedin:
