--- a/Sito.html
+++ b/Sito.html
@@ -13,13 +13,13 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body style="padding-bottom: 50px">
     <div class="Introduzione">
       <div class="Introduzione-descrizione">
         <h1 class="Titolo-principale">Chi sono...</h1>
 
         <p class="data-ultimo-aggiornamento">
-          (ultimo aggiornamento: 07/19/2023)
+          (ultimo aggiornamento: 07/21/2023)
         </p>
         <p>
           Sono Davide Picerno e sono uno studente di Ingegneria Aerospaziale al
@@ -85,7 +85,7 @@
         />
       </div>
     </div>
-
+    <div class="p2-sito"></div>
     <h2 class="main-title" id="section-Percorso_Scolastico">
       Percorso scolastico
     </h2>
@@ -315,7 +315,11 @@
       vista dei contenuti e della struttura. Ti invito, quindi, a suggerirmi
       qualche modifica scrivendomi al seguente indirizzo:
       <a href="mailto:picerno5@gmail.com">picerno5@gmail.com</a>.<br />
-      <a href="#"><em> Torna all'inizio</em></a>
     </p>
+    <div class="back-2-start">
+      <div>
+        <a class="back-2-start-text" href="#"><em> Torna all'inizio</em></a>
+      </div>
+    </div>
   </body>
 </html>
