--- a/Sito.html
+++ b/Sito.html
@@ -1,324 +1,91 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <link rel="stylesheet" href="elementi-personalizzati.css" />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Pagina web di Davide Picerno" />
-    <title>Davide Picerno Web Page</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300&display=swap"
-      rel="stylesheet"
-    />
+    <title>Pagina Divisa in Due</title>
   </head>
-  <body style="padding-bottom: 50px">
-    <div class="Introduzione">
-      <div class="Introduzione-descrizione">
-        <h1 class="Titolo-principale">Chi sono...</h1>
+  <body>
+    <div class="left">
+      <!-- Contenuto della parte sinistra -->
 
-        <p class="data-ultimo-aggiornamento">
-          (ultimo aggiornamento: 07/21/2023)
-        </p>
-        <p>
-          Sono Davide Picerno e sono uno studente di Ingegneria Aerospaziale al
-          <a
-            class="collegamenti-elenco-puntato"
-            href="https://www.polito.it/"
-            target="_blank"
-            >Politecnico di Torino</a
+      <div class="struttura-lato-sinistro">
+        <div>
+          <h2 class="Titolo-principale">Davide Picerno</h2>
+        </div>
+        <div class="struttura-lato-sinistro-voci">
+          <a class="voci-elenco-puntato-parte-sinistra" href="Sito.html"
+            >Homepage</a
           >
-          &#128748;.
-        </p>
-        <p>
-          Se desideri andare ad una ben precisa sezione del mio sito clicca la
-          sezione che ti interessa riportata di seguito:
-        </p>
-
-        <ul>
-          <li>
-            <a class="elenco-puntato" href="#section-Passion">Passioni;</a>
-          </li>
-          <li>
-            <a class="elenco-puntato" href="#section-Percorso_Scolastico"
-              >Percorso scolastico;</a
-            >
-          </li>
-          <li>
-            <a class="elenco-puntato" href="#section-Viaggi"
-              >Dove sono stato;</a
-            >
-          </li>
-          <li>
-            <a class="elenco-puntato" href="#section-Motivo sito"
-              >Perchè questa pagina web;</a
-            >
-          </li>
-          <li>
-            <a class="elenco-puntato" href="#section-Contatti">Contatti.</a>
-          </li>
-        </ul>
-        <h2 class="main-title" id="section-Passion">Passioni</h2>
-
-        <p>
-          Sono un grande appassionato di Formula 1 e Motorsport in quanto è un
-          ambiente fortemente competitivo ma di squadra. Ciò che mi suscita
-          particolare interesse è l'aerodinamica dei corpi. Attualmente,
-          infatti, frequento un corso di studi dedicato; ne parlo meglio
-          nell'apposita sezione. <br />
-          In un futuro prossimo mi piacerebbe mettermi in gioco in uno dei due
-          ambiti precedentemente citati ma in un posto lontano da Torino per
-          avere modo di conoscere altre culture; poi eventualmente potrei
-          tornare nella cintura di Torino. Mi piacerebbe molto, quindi, avere
-          delle prime esperienze lavorative o all'estero oppure in altre regioni
-          d'Italia.
-          <br />
-          Sono dell'idea che faccio sempre in tempo a tornare ma non a partire!
-        </p>
+        </div>
+        <div class="struttura-lato-sinistro-voci">
+          <a class="voci-elenco-puntato-parte-sinistra" href="Passioni.html"
+            >Passioni</a
+          >
+        </div>
+        <div class="struttura-lato-sinistro-voci">
+          <a
+            class="voci-elenco-puntato-parte-sinistra"
+            href="Percorso-scolastico.html"
+            >Percorso scolastico</a
+          >
+        </div>
+        <div class="struttura-lato-sinistro-voci">
+          <a
+            class="voci-elenco-puntato-parte-sinistra"
+            href="Dove-sono-stato.html"
+            >Dove sono stato</a
+          >
+        </div>
+        <div class="struttura-lato-sinistro-voci">
+          <a
+            class="voci-elenco-puntato-parte-sinistra"
+            href="Perchè-questa-pagina.html"
+            >Perchè questa pagina web</a
+          >
+        </div>
+        <div class="struttura-lato-sinistro-voci">
+          <a class="voci-elenco-puntato-parte-sinistra" href="Contatti.html"
+            >Contatti</a
+          >
+        </div>
       </div>
-      <div class="Immagine">
+    </div>
+    <div class="center">
+      <!-- Contenuto della parte destra -->
+      <h2 class="Titolo-principale">Chi sono..</h2>
+      <p class="data-ultimo-aggiornamento">
+        (ultimo aggiornamento: 07/27/2023)
+      </p>
+      <p class="paragrafo-ultimo">
+        Sono Davide Picerno, un giovane di 23 anni che vive in un paesino
+        tranquillo chiamato Cumiana, non lontano da Torino. <br />
+        Da sempre sono attratto e incuriosito dalla scienza e da tutto ciò che
+        mi circonda. Questo interesse, combinato con la passione della Formula
+        1, che seguo ormai da qualche anno, mi ha spinto a intraprendere gli
+        studi di <em>Ingegneria Aerospaziale</em> presso il
+        <a
+          class="collegamenti-elenco-puntato"
+          href="https://www.polito.it/"
+          target="_blank"
+          >Politecnico di Torino</a
+        >. <br />Ciò che stimola particolarmente il mio interesse è tutto ciò
+        che riguarda il movimento fluido attorno ai corpi, ossia come l'aria e i
+        corpi in movimento interagiscono tra di loro. <br />
+        La mia sete di curiosità non si ferma qui, infatti, oltre alla scienza,
+        ho un'altra grande passione: viaggiare! Sono molto curioso di esplorare
+        culture nuove e diverse. <br />Viaggiare è modo migliore per aprire la
+        mente coprendo le diversità e la meraviglia di ciò che il mondo ha da
+        offrire.
+      </p>
+    </div>
+    <div class="right">
+      <!-- Contenuto della parte destra -->
+      <div>
         <img
           class="io"
           src="immagini/Davide Picerno.jpg"
           alt=" Foto di Davide Picerno"
         />
-      </div>
-    </div>
-    <div class="p2-sito"></div>
-    <h2 class="main-title" id="section-Percorso_Scolastico">
-      Percorso scolastico
-    </h2>
-    <h3 class="main-title">Superiori</h3>
-    <p>
-      Da Settembre 2012 a Giugno 2018 ho frequentato l'istituto tecnico
-      <a href="https://www.itispininfarina.edu.it/" target="_blank">
-        ITIS G.B. Pininfarina</a
-      >
-      nel corso di <em>Meccanica e Meccatronica</em>. Ho deciso di intraprendere
-      tale percorso per un semplice motivo: ero convinto che fosse l'istituto
-      più adatto a me rispetto alla concorrenza. Ho fatto quella scelta perchè,
-      a parer mio, era la miglior strada per chi non aveva bene le idee chiare
-      sul proseguire o meno con gli studi. Al contrario di come molti la
-      pensano, se si proseguono gli studi nello stesso ambito di studio, un ITIS
-      fornisce una preparazione migliore rispetto a quella di un liceo per le
-      materie di indirizzo. Queste infatti ricoprono una percentuale molto alta
-      nel percorso di studi. <br />
-      Questa scuola mi ha dato la possibilità di seguire un progetto di
-      Alternanza Scuola-Lavoro (ASL) particolare, infatti era adottato da 4 soli
-      istituti in tutto il paese. Il progetto di ASL prendeva il nome di
-      <em>Sistema&nbsp;Duale</em>. Tale percorso prevedeva un totale di circa
-      <em>1000 ore in azienda</em>. Queste ore erano spalmate dal 3' al 5' anno.
-      Ogni studente (a seguito di una selezione) veniva assegnato ad una
-      azienda. Eravamo un totale di 24 studenti e le aziende disponibili erano
-      all'incirca 20; pertanto eravamo circa uno studente per ogni azienda.
-      <br />
-      Ho seguito questo percorso in Microtecnica (azienda che opera nel settore
-      aeronautico facente parte del gruppo <em>Collins Aerospace</em>). Lì ho
-      avuto la fortuna di appassionarmi anche al mondo dell'Aerospace.
-    </p>
-    <h3 class="main-title">Università</h3>
-    <p>
-      Come già anticipato, frequento il Politecnico di Torino. La mia scelta di
-      proseguire gli studi presso il Politecnico è maturata nel percorso di ASL.
-      Ho creduto da subito nel percorso di <em>Ingegneria Aerospaziale</em> in
-      quanto permette come sbocchi sia il settore Aeronautico che quello
-      Automotive. Come tutti i corsi attualmente presenti nell'ambito
-      dell'Ingegneria al Politecnico di Torino, questi sono suddivisi in 3+2.
-    </p>
-
-    <h4 class="main-title">
-      Percorso di Laurea Triennale in Ingegneria Aerospaziale
-    </h4>
-    <p>
-      Il percorso di laurea triennale serve proprio per porre le fondamenta da
-      sviluppare nel percorso Magistrale. Il primo anno era uguale per tutti i
-      rami di Ingegneria. <br />
-      Del primo anno ho un particolare ricordo del corso di Analisi 1. In quel
-      corso ho avuto il Professore migliore che abbia mai incontrato. Ha sempre
-      tenuto le lezioni con passione e cercando di coinvolgerci ma soprattutto
-      di farci capire quanto fosse più importante capire il vero senso delle
-      materie piuttosto che studiando ai fini degli esami. Credo che aver
-      incontrato tale Professore sia stata una grande mano anche perchè era il
-      mio primo anno di Università ed è il cruciale per capire se uno si ritiene
-      adatto o meno a proseguire gli studi. <br />
-      Del secondo anno, invece, ricordo , oltre all'inizio del Covid 19, un
-      corso molto simpatico per tutti gli aerospaziali: Disegno Tecnico
-      Industriale. Il Professore dava per scontato che tutti gli studenti
-      sapessero leggere i disegni. Il suo modo di insegnare era quello di
-      mostrare delle tavole e commentarle. Chiaramente la maggior parte dei
-      colleghi non avevano mai visto un disegno. Durante l'anno era necessario
-      eseguire all'incirca una trentina di tavole a mano. Le tavole erano
-      'facoltative' nel senso che se superavi l'esame con un voto maggiore o
-      uguale a 24 evitavi l'orale se presentavi le tavole. Se l'esame veniva
-      superato con voto dal 18 al 23 allora quelle tavole erano tempo e fogli
-      persi. Tantissimi studenti hanno un brutto ricordo di questo corso. Io,
-      grazie al percorso di ASL e un background in Meccanica, non l'ho patito.
-      Mi portava via un giorno a settimana per fare le tavole per non farle
-      accumulare ma almeno era leggermente diverso dallo studio tradizionale.
-      <br />
-      Del terzo e ultimo anno di triennale ricordo il mio percorso di tesi. Il
-      percorso di tesi vertava sullo studio di un sistemma in grado di
-      oscillare. Il sistema era composto da un carrellino in grado di scorrere
-      su un piano. Sopra il carrello era montata (in verticale) una trave con
-      una massa concentrata alla sua erstremità. Il percorso è stato molto
-      interessante, sia per gli argomenti trattati (stabilità del sistema, caos
-      deterministico) che per il modo e i programmi con cui sono stati trattati.
-      Quando dovevo cercare la tesi, volevo trovarne una in cui ci fosse da
-      utilizzare Matlab<sup>&copy</sup> siccome è un programma molto potente e
-      molto diffuso in ambito ingegneristico. <br />
-    </p>
-    <h4 class="main-title">
-      Percorso di Laurea Magistrale in Ingegneria Aerospaziale
-    </h4>
-    <p>
-      Come specialistica ho scelto Aerogasdinamica dove si approfondisce lo
-      studio dei flussi con materie pratiche (nelle gallerie del vento del
-      dipartimento), teoriche e riguardanti la numerica. <br />
-      Le materie che più mi hanno entusiasmato sono state Gasdinamica e
-      Aerodinamica sperimentale. La prima riguarda lo studio dei flussi
-      nell'ambito del comprimibile (alto subsonico) e del supersonico. E' stata
-      più entusiasmante rispetto ad Aerodinamica (terzo anno triennale) perchè
-      era leggermente meno teorica ma più applicativa. Aerodinamica sperimentale
-      è stato l'ultimo esame che ho sostenuto nel percorso di studi ed è ideale
-      per essere al secondo semestre del secondo anno in quanto vengono ripresi
-      tutti gli argomenti della fluidodinamica e messi in pratica
-      sperimentalmente. Tutti i laboratori del corso sono racchiusi in una
-      relazione che ho tenuto a fare nel migliore dei modi in quanto in un
-      futuro saprei dove andare a ricercare determinati argomenti. <br />
-      Grazie alla tesi di triennale mi sono interessato particolarmente al mondo
-      delle vibrazioni, pertanto ho deciso di frequentare corsi attinenti alla
-      meccanica della vibrazione ("Dinamica delle strutture aeronautiche" e
-      "Aeroelasticità"). <br />
-      Al momento sto seguendo un percorso di Tesi relativamente
-      all'estrapolazione della traiettoria dei velivoli per i simulatori di volo
-      presso
-      <a
-        href="https://aircraft.leonardo.com/it/?gclid=Cj0KCQjwnrmlBhDHARIsADJ5b_mD3lRGw3XXvCc-NRu0t5Is2m9zqoxAaF7DatiF6nXjfrZhfj4Cwl0aAqgBEALw_wcB"
-        target="_blank"
-        >Leonardo Velivoli</a
-      >
-      (stabilimento in Corso Francia, Torino).
-    </p>
-    <h2 class="main-title" id="section-Viaggi">Dove sono stato</h2>
-    <h3 class="main-title">
-      <span>Scozia</span>
-      <img
-        class="bandiere"
-        src="immagini\Scotland_flag.png"
-        alt=""
-        align="center"
-      />
-    </h3>
-    <p>
-      Ho avuto la fortuna di poter passare 6 settimane ogni estate dal 2015 al
-      2018 in Scozia in un parco acquatico chiamato
-      <a href="https://www.foxlake.co.uk/" target="_blank">Foxlake</a> in cui,
-      tra le altre attività, si fa Wakeboard. Il parco si trova in Dunbar, un
-      paese piccolino nella regione di East Lothian. Di questa esperienza ho dei
-      bei ricordi in quanto ho conosciuto molte persone della mia età di una
-      cultura abbastanza diversa dalla mia. Al contrario di come si possa
-      pensare, tutti i ragazzi che ho conosciuto erano molto alla mano e
-      soprattutto molto inclusivi. Mi sono sempre sentito il benvenuto tra di
-      loro.
-      <br />
-      Della Scozia mi è rimasto anche il bel ricordo (oltre alle partite di golf
-      guardate e non giocate) delle passeggiate nei bei paesaggi caratteristici
-      immersi nel verde lungo il gelido Mar del nord.
-      <br />
-      Sono anche stato a vedere la gara di Formula 1 a Silverstone nel 2017 e
-      nel 2018 (che gli appassionati ricorderanno come "Qui.. a casa loro!"). E'
-      stato veramente spettacolare, è uno sport molto diverso rispetto a quello
-      che si vede in televisione. Dal vivo si percepisce decisamente meglio la
-      velocità a cui sfrecciano le monoposto e quanto è forte il Downforce.
-      Ricordo che sono rimasto sconvolto dal vedere la velocità che
-      sviluppavano, non tanto in rettilineo quanto nelle curve. Letteralmente
-      impressionante. <br />
-    </p>
-    <h3 class="main-title">
-      Qatar
-      <img
-        class="bandiere"
-        src="immagini\Qatar_flag.jpg"
-        alt=""
-        align="center"
-      />
-    </h3>
-    <p>
-      Nel 2014 sono stato in vacanza in Qatar, a Doha, un'altra cultura molto
-      diversa dalla mia! Ho dei bei ricordi inerenti allo svago (il deserto coi
-      quad, mare, piscina,..) ma non molti relativi alle caratteristiche del
-      posto. Sono stato nel vecchio mercato di Doha che è veramente
-      caratteristico, nel deserto, nelle lagune e nel museo di Arte islamica.
-      Credo di aver visto, appunto, il 90% di quello che ci fosse da visitare.
-      Come tutte le città molto recenti non hanno una storia molto lunga e
-      quindi si possono osservare delle differenze con le nostre città che
-      risaltano all'occhio. I marciapiedi sono quasi del tutto inesistenti
-      perchè ogni persona possiede un'automobile e, ad esempio, non esistono
-      vere e proprie zone di ritrovo per i giovani. Non ci sono monumenti o
-      strutture datate che permettono di immaginare come fosse la città parecchi
-      anni fa. Ci sono prevalentemente palazzi mastodontici nel centro della
-      vittà e una zona periferica che viene tenuta abbastanza nascosta
-      dall'esterno.
-    </p>
-    <h3 class="main-title">
-      Italia
-      <img
-        class="bandiere"
-        src="immagini\Italy_flag.png"
-        alt=""
-        align="center"
-      />
-    </h3>
-    <p>
-      Ho avuto il piacere di girare abbastanza l'Italia. Sono stato nelle isole
-      e al Sud oltre che al Nord tra Piemonte, Lombardia e Veneto. Mi manca da
-      visitare un po' il centro del Paese che spero di riuscire a fare presto.
-      Non ho fretta dal momento che di tanto in tanto il week end in qualche
-      città italiana o qualche zona caratteristica è facilmente organizzabile.
-    </p>
-    <h2 class="main-title" id="section-Motivo sito">
-      Perchè questa pagina web?
-    </h2>
-    <p>
-      L'idea di questa pagina web nasce puramente per caso. Mi piaceva pensare
-      di poter imparare a creare una pagina web raccontandomi in un modo meno
-      formale. Quello che credo essere il punto di forza di una pagina web è che
-      chiunque può informarsi su di te in qualsiasi momento. Mi incuriosisce il
-      pensiero che qualcuno stia leggendo questa pagina mentre io magari sto
-      facendo qualunque tipo di attività come, ad esempio, dormire, studiare,
-      lavorare o bere una birra in compagnia. Sto curando questa pagina a tempo
-      perso per fare pratica e imparare. Spero di tenerla aggiornata il più
-      possibile sia dal punto di vista dei contenuti che dal punto di vista
-      grafico.
-    </p>
-    <h2 class="main-title" id="section-Contatti">Contatti</h2>
-    <p>
-      I miei profili social sono: <br />
-      - Linkedin:
-      <a
-        href="https://www.linkedin.com/in/davide-picerno-3906a2184/"
-        target="_blank"
-        >Davide Picerno</a
-      >; <br />
-      - Instagram:
-      <a
-        href="https://instagram.com/diaviidie?igshid=NGExMmI2YTkyZg=="
-        target="_blank"
-        >@diaviidie</a
-      >.
-      <br />
-
-      <br />
-      Ti invito a fornirmi dei feedback su questa pagina in quanto sono agli
-      albori e quindi c'è un infinito margine di miglioramento dal punto di
-      vista dei contenuti e della struttura. Ti invito, quindi, a suggerirmi
-      qualche modifica scrivendomi al seguente indirizzo:
-      <a href="mailto:picerno5@gmail.com">picerno5@gmail.com</a>.<br />
-    </p>
-    <div class="back-2-start">
-      <div>
-        <a class="back-2-start-text" href="#"><em> Torna all'inizio</em></a>
       </div>
     </div>
   </body>
