--- a/Dove-sono-stato.html
+++ b/Dove-sono-stato.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="elementi-personalizzati.css" />
-    <title>Pagina Divisa in Due</title>
+    <title>Davide Picerno Webpage</title>
   </head>
   <body>
     <div class="left">
