--- a/Percorso-scolastico.html
+++ b/Percorso-scolastico.html
@@ -86,7 +86,7 @@
         <em>Collins Aerospace</em>). Lì ho avuto la fortuna di appassionarmi
         anche al mondo dell'Aerospace.
       </p>
-      <h3 class="main-title">Università (2018-20??)</h3>
+      <h3 class="main-title">Università (2018-2023)</h3>
       <p>
         Come già anticipato, frequento il Politecnico di Torino. La mia scelta
         di proseguire gli studi presso il Politecnico è maturata nel percorso di
@@ -139,7 +139,7 @@
         importante e molto diffuso in ambito ingegneristico. <br />
       </p>
       <h4 class="main-title">
-        Percorso di Laurea Magistrale in Ingegneria Aerospaziale (2021-20??)
+        Percorso di Laurea Magistrale in Ingegneria Aerospaziale (2021-2023)
       </h4>
       <p class="paragrafo-ultimo">
         Come specialistica ho scelto Aerogasdinamica dove si approfondisce lo
@@ -160,15 +160,18 @@
         mondo delle vibrazioni, pertanto ho deciso di frequentare corsi
         attinenti alla meccanica della vibrazione ("Dinamica delle strutture
         aeronautiche" e "Aeroelasticità"). <br />
-        Al momento sto seguendo un percorso di Tesi relativamente
-        all'estrapolazione della traiettoria dei velivoli per i simulatori di
-        volo presso
+        Il percorso di tesi ha riguardato l'estrapolazione della traiettoria dei
+        velivoli per i simulatori di volo presso
         <a
           href="https://aircraft.leonardo.com/it/?gclid=Cj0KCQjwnrmlBhDHARIsADJ5b_mD3lRGw3XXvCc-NRu0t5Is2m9zqoxAaF7DatiF6nXjfrZhfj4Cwl0aAqgBEALw_wcB"
           target="_blank"
           >Leonardo Velivoli</a
         >
-        (stabilimento in Corso Francia, Torino).
+        (stabilimento in Corso Francia, Torino). <br />
+      </p>
+      <p class="risalto">
+        Il percorso di Laurea Magistrale è giunto al termine in data 25 Ottobre
+        2023 con valutazione 110/110.
       </p>
     </div>
     <div class="right">
